# Axum-Sveltekit

axum-todo-api/: .gitignore  Cargo.toml
axum-todo-api/src/: app_state.rs  config.rs  main.rs  routes.rs  schemas.rs
